--- a/proto.ipynb
+++ b/proto.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "bbc69c72-6cbe-4681-a584-2552476fc615",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "id": "ccf5f38c-bf0b-406c-9146-dbd90102c3d7",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "228f88cd-ffbc-4b72-8dea-9103486da76f",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "id": "33a43016-4cc9-4a54-a695-19d7cc09f9fc",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "16715e1a-e310-408f-832f-94e8d51fb3d4",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "d851b391-c857-4026-9c67-5453f69755fa",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "bf51fbed-8bda-47a3-904e-5f39d2c3e879",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "id": "01fbd6b1",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "id": "5bb28419-d9ac-47b7-865c-80fec1f830c9",
    "metadata": {},
    "outputs": [
@@ -130,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "id": "562f0b2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikeshares_wheaterDf_final.write.mode('overwrite').csv('./data/result_final_csv')"
+    "bikeshares_wheaterDf_final.write.mode('overwrite').csv('./data/result_csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "id": "391a8dcd",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "id": "f92861d9-ac50-4bcb-8bd8-de4104ec7542",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "id": "5e720d78-2345-4fdd-898d-c485423273bc",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "id": "24ff0cd5-8f6f-4328-b0c5-ca3e3edd8229",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "id": "67890b58",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "id": "82ee0f64",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "id": "66f9250d",
    "metadata": {},
    "outputs": [
