add more dashboards

--- a/proto.ipynb
+++ b/proto.ipynb
@@ -256,9 +256,9 @@
     "from collections import Counter\n",
     "\n",
     "'''\n",
-    " 0 --> unknown\n",
-    " 1 --> male\n",
-    " 2 --> female\n",
+    " 0 --> unknown == customer \n",
+    " 1 --> male == \n",
+    " 2 --> female == \n",
     "'''\n",
     "\n",
     "def prepare_for_bar(column, title):\n",
